--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,14 +1,13 @@
 h1,
 a,
 h2,
+h3,
 button,
 p {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
-}
-body {
-  width: 1440px;
+  text-transform: uppercase;
 }
 button {
   width: 157px;
@@ -16,7 +15,7 @@ button {
   background: rgb(251, 75, 77);
   border: none;
   color: #ffffff;
-  font-size: 14px;
+  font-size: 0.875em;
 }
 .header {
   display: grid;
@@ -24,27 +23,34 @@ button {
   grid-template-rows: 1fr;
   align-items: center;
   justify-items: center;
+  border: 1px solid rgb(0, 0, 0);
 }
 h1 {
-  font-size: 58px;
+  font-size: 3.625em;
   grid-area: 1/2/2/3;
   text-align: center;
   margin-left: 80px;
   margin-right: 80px;
 }
 h2 {
-  font-size: 65px;
+  font-size: 4.062em;
   margin-right: 10px;
   margin-left: 10px;
   text-align: center;
   font-weight: 500;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+h3 {
+  font-size: 2em;
+}
 .text {
-  font-size: 17px;
+  font-size: 1em;
   text-transform: uppercase;
   grid-area: 3/1/4/2;
   margin-right: 10px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  box-sizing: border-box;
 }
 .text::after {
   content: url(../img/pepper.png);
@@ -54,8 +60,11 @@ h2 {
   content: url(../img/pepper.png);
   margin-right: 30px;
 }
+.b-menu {
+  display: none;
+}
 .menu {
-  font-size: 14px;
+  font-size: 0.875em;
   color: rgb(34, 34, 34);
   text-decoration: none;
 }
@@ -63,6 +72,7 @@ ul {
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  justify-content: center;
   align-items: center;
   justify-items: center;
   padding: 0px;
@@ -71,8 +81,9 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 22.5% 22.5% 10% 45%;
-  align-items: center;
+  align-items: stretch;
   justify-items: center;
+  margin-top: 50px;
 }
 .container2 {
   display: grid;
@@ -80,15 +91,234 @@ ul {
   grid-template-rows: 1fr;
   align-items: center;
   justify-items: center;
+  margin-top: 50px;
 }
 .image_logo {
   grid-area: 1/1/3/2;
+  width: 100%;
+  padding: 20px;
+  object-fit: contain;
+  box-sizing: border-box;
 }
 .image_sauce1 {
   grid-area: 4/1/5/2;
   align-self: end;
+  width: 100%;
+  padding: 20px;
+  object-fit: contain;
+  box-sizing: border-box;
 }
 .image_sauce2 {
   grid-area: 2/2/5/3;
   align-self: end;
+  width: 100%;
+  padding: 20px;
+  object-fit: contain;
+  box-sizing: border-box;
+}
+.list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 23px;
+  margin-top: 50px;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 658px;
+  background-image: url(../img/green.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding-top: 15px;
+  box-sizing: border-box;
+}
+.bottle {
+  width: 90%;
+  object-fit: cover;
+}
+.subtitle {
+  margin-bottom: 0px;
+  font-size: 1.125em;
+}
+.cardname {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 2em;
+}
+.line {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.picture_big {
+  height: 100%;
+  width: 100%;
+  margin-top: 50px;
+  object-fit: cover;
+}
+.image_scorpion1,
+.image_scorpion2 {
+  width: 100%;
+  max-height: 156px;
+  object-fit: contain;
+}
+.wrapper {
+  width: 100%;
+  text-align: center;
+}
+/* бургер-меню */
+.b-menu {
+  margin-top: 10px;
+  margin-left: 5px;
+}
+.burger-checkbox {
+  position: absolute;
+  visibility: hidden;
+}
+.burger {
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  display: block;
+  position: relative;
+  border: none;
+  background: transparent;
+  width: 40px;
+  height: 26px;
+}
+.burger::before,
+.burger::after {
+  content: "";
+  left: 0;
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 10px;
+  background: #000;
+}
+.burger::before {
+  top: 0;
+  box-shadow: 0 11px 0 #000;
+  transition: box-shadow 0.3s 0.15s, top 0.3s 0.15s, transform 0.3s;
+}
+.burger::after {
+  bottom: 0;
+  transition: bottom 0.3s 0.15s, transform 0.3s;
+}
+.burger-checkbox:checked + .burger::before {
+  top: 11px;
+  transform: rotate(45deg);
+  box-shadow: 0 6px 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 0.15s, top 0.3s, transform 0.3s 0.15s;
+}
+.burger-checkbox:checked + .burger::after {
+  bottom: 11px;
+  transform: rotate(-45deg);
+  transition: bottom 0.3s, transform 0.3s 0.15s;
+}
+.menu-list {
+  top: 0;
+  left: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding: 42px 0;
+  margin: 0;
+  background: rgb(251, 75, 77);
+  list-style-type: none;
+  transform: translateX(-100%);
+  transition: 0.3s;
+  width: 200px;
+}
+.menu-item {
+  display: block;
+  padding: 8px;
+  color: white;
+  font-size: 18px;
+  text-align: center;
+  text-decoration: none;
+}
+.menu-item:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+.burger-checkbox:checked ~ .menu-list {
+  transform: translateX(0);
+}
+@media screen and (max-width: 960px) {
+  .menu {
+    font-size: 0.625em;
+  }
+  button {
+    font-size: 0.625em;
+    width: 100px;
+  }
+  p {
+    font-size: 0.75em;
+  }
+  h2 {
+    font-size: 2.5em;
+  }
+  h1 {
+    font-size: 2.5em;
+    margin: auto;
+  }
+  .text {
+    font-size: 0.75em;
+  }
+  .text::after {
+    margin-left: 10px;
+  }
+  .text::before {
+    margin-right: 10px;
+  }
+}
+
+@media screen and (max-width: 675px) {
+  .container {
+    display: block;
+  }
+  .header {
+    display: flex;
+    border: none;
+  }
+  nav,
+  .back,
+  .clone {
+    display: none;
+  }
+  .b-menu {
+    display: block;
+  }
+}
+@media screen and (max-width: 389px) {
+  .card {
+    min-height: 100%;
+    background-image: none;
+  }
+  .list,
+  .container2 {
+    margin-top: 0px;
+  }
+
+  .cardname {
+    font-size: 1em;
+  }
+  h1,
+  h2 {
+    font-size: 1.25em;
+  }
+  .text::after {
+    content: none;
+  }
+  .text::before {
+    content: none;
+  }
+  .line {
+    display: none;
+  }
 }
